08/12/09 Julien Dutheil
* First draft of new TreeLikelihood model iterators
* Updated TreeLikelihood interfaces
* New interface SitePartitionTreeLikelihood interface, allowing different
  sites to have a distinct substitution model.

24/11/09 Julien Dutheil
* Cleaned substitution mapping classes, and added a new one.

31/10/09 Julien Dutheil
* Code cleaning in FrequenciesSet.

19/10/09 Julien Dutheil
* Bug fixed in node setFather method + new check and warning messages in tree
  edition methods.

21/08/09 Julien Dutheil
* Added config files for CMake.

12/08/09 Bastien Boussau & Julien Dutheil
* Function getValue in likelihood classes now does not repeat calculations
  if called several times on the same parameters.

09/08/09 Julien Dutheil
* Added PhyloStatistics class for computing several quantities on a tree
  in an efficient manner.

08/08/09 Bastien Boussau
* Added support for reading trees with id in TreeTemplateTools.

07/08/09 Sophie Abby & Julien Dutheil
* [biopp-help-forum:214] Bug fixed in cloneSubtree, remove the link toward the
father node of the root node of the subtree.

05/08/09 Julien Dutheil
* TreeDrawing classes improved.

22/07/09 Julien Dutheil
* Added TreeDrawing classes.

29/06/09 Julien Dutheil
* Upgraded TreeLikelihood interfaces and SubstitutionModel interface + code lifting.
* New class TreeLikelihoodTools
* Added computation of expected ancestral frequencies.
* Added computation of ancestral frequencies using an empirical bayesian
  approach.

27/06/09 Céline Scornavacca & Julien Dutheil
* Newick and Nexus tree output now use polymorphism in order to print
TreeTemplate objects more efficiently.

24/06/09 Julien Dutheil
* Change precision output while printing parameters.

24/06/09 Laurent Gueguen
* Added codon and general word models.

23/06/09 Julien Dutheil
* Compatibility update: now containers returns references instead of pointers.
* TreeTemplate now uses pointers and not references.
* Added dropTip function in TreeTemplateTools.
