@@ -4,37 +4,37 @@
 //
 
 /*
-  Copyright or © or Copr. CNRS, (November 16, 2004)
+   Copyright or © or Copr. CNRS, (November 16, 2004)
 
-  This software is a computer program whose purpose is to provide classes
-  for phylogenetic data analysis.
+   This software is a computer program whose purpose is to provide classes
+   for phylogenetic data analysis.
 
-  This software is governed by the CeCILL  license under French law and
-  abiding by the rules of distribution of free software.  You can  use, 
-  modify and/ or redistribute the software under the terms of the CeCILL
-  license as circulated by CEA, CNRS and INRIA at the following URL
-  "http://www.cecill.info". 
+   This software is governed by the CeCILL  license under French law and
+   abiding by the rules of distribution of free software.  You can  use,
+   modify and/ or redistribute the software under the terms of the CeCILL
+   license as circulated by CEA, CNRS and INRIA at the following URL
+   "http://www.cecill.info".
 
-  As a counterpart to the access to the source code and  rights to copy,
-  modify and redistribute granted by the license, users are provided only
-  with a limited warranty  and the software's author,  the holder of the
-  economic rights,  and the successive licensors  have only  limited
-  liability. 
+   As a counterpart to the access to the source code and  rights to copy,
+   modify and redistribute granted by the license, users are provided only
+   with a limited warranty  and the software's author,  the holder of the
+   economic rights,  and the successive licensors  have only  limited
+   liability.
 
-  In this respect, the user's attention is drawn to the risks associated
-  with loading,  using,  modifying and/or developing or reproducing the
-  software by the user in light of its specific status of free software,
-  that may mean  that it is complicated to manipulate,  and  that  also
-  therefore means  that it is reserved for developers  and  experienced
-  professionals having in-depth computer knowledge. Users are therefore
-  encouraged to load and test the software's suitability as regards their
-  requirements in conditions enabling the security of their systems and/or 
-  data to be ensured and,  more generally, to use and operate it in the 
-  same conditions as regards security. 
+   In this respect, the user's attention is drawn to the risks associated
+   with loading,  using,  modifying and/or developing or reproducing the
+   software by the user in light of its specific status of free software,
+   that may mean  that it is complicated to manipulate,  and  that  also
+   therefore means  that it is reserved for developers  and  experienced
+   professionals having in-depth computer knowledge. Users are therefore
+   encouraged to load and test the software's suitability as regards their
+   requirements in conditions enabling the security of their systems and/or
+   data to be ensured and,  more generally, to use and operate it in the
+   same conditions as regards security.
 
-  The fact that you are presently reading this means that you have had
-  knowledge of the CeCILL license and that you accept its terms.
-*/
+   The fact that you are presently reading this means that you have had
+   knowledge of the CeCILL license and that you accept its terms.
+ */
 
 #include "MixedSubstitutionModel.h"
 #include <string>
@@ -43,104 +43,106 @@ using namespace bpp;
 using namespace std;
 
 
-MixedSubstitutionModel::MixedSubstitutionModel(const Alphabet * alpha,
-                       SubstitutionModel * _model,  
-                       map<string,DiscreteDistribution*>  _parametersdistributionslist)
-  
-  :AbstractSubstitutionModel(alpha,"MixedModel.")
-{ 
-
+MixedSubstitutionModel::MixedSubstitutionModel(const Alphabet* alpha,
+                                               SubstitutionModel* model,
+                                               map<string,DiscreteDistribution*> parametersDistributionsList) :
+    AbstractSubstitutionModel(alpha,"MixedModel.")
+{
   unsigned int c, i;
   double d;
   string s1, s2, t;
   map<string, DiscreteDistribution*>::iterator it;
-  
-  // Initialization of distributionmap_.
 
-  vector<string> parnames=_model->getParameters().getParameterNames();
-  
-  for(i=0; i<_model->getNumberOfParameters(); i++){
+  // Initialization of distributionMap_.
 
-    s1=parnames[i];
-    s2=_model->getParameterNameWithoutNamespace(s1);
-    
-    if (_parametersdistributionslist.find(s2)!=_parametersdistributionslist.end())
-      distributionmap_["MixedModel."+s1]=dynamic_cast<DiscreteDistribution*>(_parametersdistributionslist.find(s2)->second->clone());
+  vector<string> parnames = model->getParameters().getParameterNames();
+
+  for (i = 0; i < model->getNumberOfParameters(); i++)
+  {
+    s1 = parnames[i];
+    s2 = model->getParameterNameWithoutNamespace(s1);
+
+    if (parametersDistributionsList.find(s2) != parametersDistributionsList.end())
+      distributionMap_["MixedModel." + s1] = dynamic_cast<DiscreteDistribution*>(parametersDistributionsList.find(s2)->second->clone());
     else
-      distributionmap_["MixedModel."+s1]= new ConstantDistribution(_model->getParameterValue(s2));
-    
-    
-    if (dynamic_cast<ConstantDistribution*>(distributionmap_["MixedModel."+s1])==NULL)
-      distributionmap_["MixedModel."+s1]->setNamespace("MixedModel."+s1+"."+distributionmap_["MixedModel."+s1]->getNamespace());
+      distributionMap_["MixedModel." + s1] = new ConstantDistribution(model->getParameterValue(s2));
+
+
+    if (dynamic_cast<ConstantDistribution*>(distributionMap_["MixedModel." + s1]) == 0)
+      distributionMap_["MixedModel." + s1]->setNamespace("MixedModel." + s1 + "." + distributionMap_["MixedModel." + s1]->getNamespace());
     else
-      distributionmap_["MixedModel."+s1]->setNamespace("MixedModel."+s1+".");
+      distributionMap_["MixedModel." + s1]->setNamespace("MixedModel." + s1 + ".");
   }
 
-  
-  // Initialization of modelscontainer_.
 
-  c=1;
+  // Initialization of modelsContainer_.
 
-  for(it=distributionmap_.begin(); it!= distributionmap_.end(); it++)
-    c*=it->second->getNumberOfCategories();
+  c = 1;
 
-  for(i=0; i<c ; i++){
-    modelscontainer_.push_back(_model->clone());
-    modelscontainer_[i]->setNamespace("MixedModel."+_model->getNamespace());
+  for (it = distributionMap_.begin(); it != distributionMap_.end(); it++)
+  {
+    c *= it->second->getNumberOfCategories();
   }
 
-  // Initialization of _parameters.
+  for (i = 0; i < c; i++)
+  {
+    modelsContainer_.push_back(model->clone());
+    modelsContainer_[i]->setNamespace("MixedModel." + model->getNamespace());
+  }
+
+  // Initialization of parameters_.
 
   Constraint* pc;
-  
-  for(it=distributionmap_.begin(); it!=distributionmap_.end(); it++){
 
-    if (dynamic_cast<ConstantDistribution*>(it->second)==NULL){
-      for(i=0; i!=it->second->getNumberOfParameters(); i++){ 
-        
-	t=it->second->getParameters().getParameterNames()[i];
-      	d=it->second->getParameters().getParameter(t).getValue();
-        
+  for (it = distributionMap_.begin(); it != distributionMap_.end(); it++)
+  {
+    if (dynamic_cast<ConstantDistribution*>(it->second) == NULL)
+    {
+      for (i = 0; i != it->second->getNumberOfParameters(); i++)
+      {
+        t = it->second->getParameters().getParameterNames()[i];
+        d = it->second->getParameters().getParameter(t).getValue();
+
         addParameter_(Parameter(t,d));
       }
     }
-    else{
-      t=it->first;
-      pc=_model->getParameter(_model->getParameterNameWithoutNamespace(getParameterNameWithoutNamespace(t))).getConstraint()->clone();
-      d=it->second->getCategory(0);
+    else
+    {
+      t = it->first;
+      pc = model->getParameter(model->getParameterNameWithoutNamespace(getParameterNameWithoutNamespace(t))).getConstraint()->clone();
+      d = it->second->getCategory(0);
       addParameter_(Parameter(t,d,pc,true));
-
     }
-
   }
 
   updateMatrices();
-
 }
 
 
 SubstitutionModel* MixedSubstitutionModel::getNModel(int i)
 {
-  return modelscontainer_[i];
+  return modelsContainer_[i];
 }
 
-int MixedSubstitutionModel::getNumberOfModels() const
+unsigned int MixedSubstitutionModel::getNumberOfModels() const
 {
-  return modelscontainer_.size();
+  return modelsContainer_.size();
 }
 
 MixedSubstitutionModel::~MixedSubstitutionModel()
 {
   unsigned int i;
   map<string, DiscreteDistribution*>::iterator it;
-  
-  for (it= distributionmap_.begin(); it!= distributionmap_.end(); it++)
+
+  for (it = distributionMap_.begin(); it != distributionMap_.end(); it++)
+  {
     delete it->second;
-  
-  for(i = 0; i < modelscontainer_.size(); i++){
-    delete modelscontainer_[i];
   }
-  
+
+  for (i = 0; i < modelsContainer_.size(); i++)
+  {
+    delete modelsContainer_[i];
+  }
 }
 
 void MixedSubstitutionModel::updateMatrices()
@@ -155,63 +157,67 @@ void MixedSubstitutionModel::updateMatrices()
   // data. (reverse operation compared to what has been done in the
   // constructor).
 
-  for( it=distributionmap_.begin(); it!=distributionmap_.end(); it++){
-
-    if (dynamic_cast<ConstantDistribution*>(it->second)==NULL){
-      for(i=0; i<it->second->getNumberOfParameters(); i++){ 
-        
-        t=it->second->getParameters().getParameterNames()[i];
-        d=getParameter(getParameterNameWithoutNamespace(t)).getValue();
-        it->second->setParameterValue(it->second->getParameterNameWithoutNamespace(t),d); 
-      }    
+  for (it = distributionMap_.begin(); it != distributionMap_.end(); it++)
+  {
+    if (dynamic_cast<ConstantDistribution*>(it->second) == NULL)
+    {
+      for (i = 0; i < it->second->getNumberOfParameters(); i++)
+      {
+        t = it->second->getParameters().getParameterNames()[i];
+        d = getParameter(getParameterNameWithoutNamespace(t)).getValue();
+        it->second->setParameterValue(it->second->getParameterNameWithoutNamespace(t),d);
+      }
     }
-    else{
-      t=it->second->getNamespace();
-      d=getParameter(getParameterNameWithoutNamespace(t.substr(0,t.length()-1))).getValue();
-      it->second->setParameterValue("value",d); 
-
+    else
+    {
+      t = it->second->getNamespace();
+      d = getParameter(getParameterNameWithoutNamespace(t.substr(0,t.length() - 1))).getValue();
+      it->second->setParameterValue("value",d);
     }
   }
 
-  
-  for(i=0; i<modelscontainer_.size(); i++){
-    
-    j=i;
-    for( it=distributionmap_.begin(); it!=distributionmap_.end(); it++){
-      s=it->first;
-      l=j%it->second->getNumberOfCategories();
-      
-      d=distributionmap_.find(s)->second->getCategory(l);
-      
+
+  for (i = 0; i < modelsContainer_.size(); i++)
+  {
+    j = i;
+    for (it = distributionMap_.begin(); it != distributionMap_.end(); it++)
+    {
+      s = it->first;
+      l = j % it->second->getNumberOfCategories();
+
+      d = distributionMap_.find(s)->second->getCategory(l);
+
       if (pl.hasParameter(s))
-	pl.setParameterValue(s,d);
+        pl.setParameterValue(s,d);
       else
-	pl.addParameter(Parameter(s,d));
+        pl.addParameter(Parameter(s,d));
 
-      j=j/it->second->getNumberOfCategories();
-      
+      j = j / it->second->getNumberOfCategories();
     }
 
-    modelscontainer_[i]->matchParametersValues(pl);
+    modelsContainer_[i]->matchParametersValues(pl);
   }
 
-  
-  for (i=0;i<getNumberOfStates();i++){
-    freq_[i]=0;
-    for( j=0; j<modelscontainer_.size(); j++)
-      freq_[i]+=modelscontainer_[j]->freq(i);
-    freq_[i]/=modelscontainer_.size();
-  }
 
+  for (i = 0; i < getNumberOfStates(); i++)
+  {
+    freq_[i] = 0;
+    for (j = 0; j < modelsContainer_.size(); j++)
+    {
+      freq_[i] += modelsContainer_[j]->freq(i);
+    }
+    freq_[i] /= modelsContainer_.size();
+  }
 }
 
 
-void MixedSubstitutionModel::setFreq(std::map<int,double>& m){
+void MixedSubstitutionModel::setFreq(std::map<int,double>& m)
+{
   throw Exception("setFreq method is not available for MixedSubstitutionModel.");
 }
 
 unsigned int MixedSubstitutionModel::getNumberOfStates() const
 {
-  return modelscontainer_[0]->getNumberOfStates();
+  return modelsContainer_[0]->getNumberOfStates();
 }
 
