@@ -1,3 +1,6 @@
+15/12/09 Laurent Guegen
+* Added classes for mixed models.
+
 08/12/09 Julien Dutheil
 * First draft of new TreeLikelihood model iterators
 * Updated TreeLikelihood interfaces
